src/test/deca/context/invalid/test_error_3.31-3.deca
// Description:
//    Soulève l'erreur (3.31)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 11 : Int, float ou string attendu (règle 3.31)
//
// Historique:
//      cree le 06/01/2022

{
	boolean b = false;
    println(b);
}
